--- a/src/components/topic-carousel/topic-carousel.css
+++ b/src/components/topic-carousel/topic-carousel.css
@@ -143,9 +143,18 @@
         margin-left: 5px !important;
         margin-right: 5px !important;
     }
+
     .topic-title {
+        position: absolute;
+        top: 0;
         font-size: 1.5em;
     }
+
+    .topic-votes-container {
+        position: absolute;
+        top: 50px;
+    }
+
     .left-topic-navigator-display, .right-topic-navigator-display {
         position: absolute;
         top: 25vh;
@@ -157,10 +166,21 @@
         -webkit-box-shadow: inset 0 0 100px 20px var(--light-neutral-color);
         box-shadow: inset 0 0 100px 20px var(--light-neutral-color);
     }
+
     .left-topic-navigator-display {
         left: 0;
     }
+
     .right-topic-navigator-display {
         right: 0;
+    }
+
+    .search-component-container {
+        width: 100%;
+        position: absolute;
+        top: -285px;
+        padding-bottom: 100px;
+        background-color: var(--dark-mode-foreground);
+        border-radius: 50px;
     }
 }
